fix issue with buttons wrapping with bold text on (#221)

--- a/src/app/pages/test-report/components/controlled-stop/controlled-stop.scss
+++ b/src/app/pages/test-report/components/controlled-stop/controlled-stop.scss
@@ -30,7 +30,7 @@
       padding-right: 5px;
 
       driving-faults-badge {
-        width: 30px;
+        width: 27px;
       }
 
       .fault-wrapper {
